--- a/best-practices/require_ro_rootfs/require_ro_rootfs.yaml
+++ b/best-practices/require_ro_rootfs/require_ro_rootfs.yaml
@@ -29,3 +29,9 @@ spec:
           containers:
           - securityContext:
               readOnlyRootFilesystem: true
+          =(ephemeralContainers):
+          - securityContext:
+              readOnlyRootFilesystem: true
+          =(initContainers):
+          - securityContext:
+              readOnlyRootFilesystem: true
