--- a/best-practices/restrict_image_registries/restrict_image_registries.yaml
+++ b/best-practices/restrict_image_registries/restrict_image_registries.yaml
@@ -29,3 +29,7 @@ spec:
         spec:
           containers:
           - image: "eu.foo.io/* | bar.io/*"
+          =(initContainers):
+          - image: "eu.foo.io/* | bar.io/*"
+          =(ephemeralContainers):
+          - image: "eu.foo.io/* | bar.io/*"
