--- a/other/add-imagepullsecrets/add-imagepullsecrets.yaml
+++ b/other/add-imagepullsecrets/add-imagepullsecrets.yaml
@@ -25,5 +25,9 @@ spec:
         spec:
           containers:
           - <(image): "corp.reg.com/*"
+          =(initContainers):
+          - <(image): "corp.reg.com/*"
+          =(ephemeralContainers):
+          - <(image): "corp.reg.com/*"
           imagePullSecrets:
           - name: my-secret
