--- a/other/disallow_secrets_from_env_vars/disallow_secrets_from_env_vars.yaml
+++ b/other/disallow_secrets_from_env_vars/disallow_secrets_from_env_vars.yaml
@@ -29,6 +29,16 @@ spec:
             =(env):
             - =(valueFrom):
                 X(secretKeyRef): "null"
+          =(initContainers):
+          - name: "*"
+            =(env):
+            - =(valueFrom):
+                X(secretKeyRef): "null"
+          =(ephemeralContainers):
+          - name: "*"
+            =(env):
+            - =(valueFrom):
+                X(secretKeyRef): "null"
   - name: secrets-not-from-envfrom
     match:
       resources:
@@ -39,6 +49,14 @@ spec:
       pattern:
         spec:
           containers:
+          - name: "*"
+            =(envFrom):
+            - X(secretRef): "null"
+          =(initContainers):
+          - name: "*"
+            =(envFrom):
+            - X(secretRef): "null"
+          =(ephemeralContainers):
           - name: "*"
             =(envFrom):
             - X(secretRef): "null"
