--- a/pod-security/restricted/require-run-as-nonroot/require-run-as-nonroot.yaml
+++ b/pod-security/restricted/require-run-as-nonroot/require-run-as-nonroot.yaml
@@ -22,6 +22,7 @@ spec:
       message: >-
         Running as root is not allowed. The fields spec.securityContext.runAsNonRoot,
         spec.containers[*].securityContext.runAsNonRoot, and
+        spec.ephemeralContainers[*].securityContext.runAsNonRoot, and
         spec.initContainers[*].securityContext.runAsNonRoot must be `true`.
       anyPattern:
       - spec:
@@ -33,10 +34,16 @@ spec:
           =(initContainers):
           - =(securityContext):
               =(runAsNonRoot): true
+          =(ephemeralContainers):
+          - =(securityContext):
+              =(runAsNonRoot): true
       - spec:
           containers:
           - securityContext:
               runAsNonRoot: true
           =(initContainers):
+          - securityContext:
+              runAsNonRoot: true
+          =(ephemeralContainers):
           - securityContext:
               runAsNonRoot: true
