--- a/other/add-imagepullsecrets-for-containers-and-initcontainers.yaml
+++ b/other/add-imagepullsecrets-for-containers-and-initcontainers.yaml
@@ -1,9 +1,9 @@
 apiVersion: kyverno.io/v1
 kind: ClusterPolicy
 metadata:
-  name: add-imagepullsecrets-for-containers-and-initcontainers
+  name: add-imagepullsecrets-for-containers-and-initcontainers-andephemeralContainers
   annotations:
-    policies.kyverno.io/title: Add imagePullSecrets for Containers and InitContainers
+    policies.kyverno.io/title: Add imagePullSecrets for Containers, InitContainers, ephemeralContainers
     policies.kyverno.io/category: Sample
     policies.kyverno.io/subject: Pod
     policies.kyverno.io/minversion: 1.3.6
@@ -12,7 +12,7 @@ metadata:
       and the kubelet uses this information in the form of an imagePullSecret to pull
       those images on behalf of your Pod. This policy searches for images coming from a
       registry called `corp.reg.com` referenced by either one of the containers or one 
-      of the init containers and, if found, will mutate the Pod to add an
+      of the initContainers, ephemeralContainers and, if found, will mutate the Pod to add an
       imagePullSecret called `my-secret`.
 spec:
   rules:
@@ -26,6 +26,9 @@ spec:
       - key: "corp.reg.com/*"
         operator: In
         value: "{{ images.initContainers.*.registry }}"
+      - key: "corp.reg.com/*"
+        operator: In
+        value: "{{ images.ephemeralContainers.*.registry }}"
       - key: "corp.reg.com/*"          
         operator: In
         value: "{{ images.containers.*.registry }}"
