--- a/other/always-pull-images/always-pull-images.yaml
+++ b/other/always-pull-images/always-pull-images.yaml
@@ -26,3 +26,9 @@ spec:
           containers:
           - (name): "?*"
             imagePullPolicy: Always
+          =(initContainers):
+          - (name): "?*"
+            imagePullPolicy: Always
+          =(ephemeralContainers):
+          - (name): "?*"
+            imagePullPolicy: Always
