--- a/other/replace_image_registry/replace_image_registry.yaml
+++ b/other/replace_image_registry/replace_image_registry.yaml
@@ -31,3 +31,11 @@ spec:
             - (name): "*"
               image: |-
                 {{ regex_replace_all('^[^/]+', '{{@}}', 'myregistry.corp.com') }}
+            =(initContainers):
+            - (name): "*"
+              image: |-
+                {{ regex_replace_all('^[^/]+', '{{@}}', 'myregistry.corp.com') }}
+            =(ephemeralContainers):
+            - (name): "*"
+              image: |-
+                {{ regex_replace_all('^[^/]+', '{{@}}', 'myregistry.corp.com') }}
