--- a/other/require_image_checksum/require_image_checksum.yaml
+++ b/other/require_image_checksum/require_image_checksum.yaml
@@ -26,3 +26,7 @@ spec:
         spec:
           containers:
           - image: "*@*"
+          =(initContainers):
+          - image: "*@*"
+          =(ephemeralContainers):
+          - image: "*@*"
