--- a/pod-security/baseline/disallow-adding-capabilities/disallow-adding-capabilities.yaml
+++ b/pod-security/baseline/disallow-adding-capabilities/disallow-adding-capabilities.yaml
@@ -23,7 +23,8 @@ spec:
         message: >-
           Adding of additional capabilities beyond the default set is not allowed.
           The fields spec.containers[*].securityContext.capabilities.add and
-          spec.initContainers[*].securityContext.capabilities.add must be empty.
+          spec.initContainers[*].securityContext.capabilities.add and
+          spec.ephemeralContainers[*].securityContext.capabilities.add must be empty.
         pattern:
           spec:
             containers:
@@ -31,6 +32,10 @@ spec:
                   =(capabilities):
                     X(add): "null"
             =(initContainers):
+              - =(securityContext):
+                  =(capabilities):
+                    X(add): "null"
+            =(ephemeralContainers):
               - =(securityContext):
                   =(capabilities):
                     X(add): "null"
