--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,10 +3,12 @@ name: Policy Test
 on:
   push:
     branches:
-      - 'main'
+      - main
+      - release*
   pull_request:
     branches:
-      - 'main'
+      - main
+      - release*
 
 jobs:
   build:
