add disable automountserviceaccounttoken policy
Signed-off-by: Chip Zoller <chipzoller@gmail.com>

--- a/other/require_unique_uid_per_workload/require_unique_uid_per_workload.yaml
+++ b/other/require_unique_uid_per_workload/require_unique_uid_per_workload.yaml
@@ -9,13 +9,12 @@ metadata:
       Two distinct workloads should not share a UID so that in a multitenant environment, applications 
       from different projects never run as the same user ID. When using persistent storage, 
       any files created by applications will also have different ownership in the file system.
-
       Running processes for applications as different user IDs means that if a security 
       vulnerability were ever discovered in the underlying container runtime, and an application 
       were able to break out of the container to the host, they would not be able to interact 
       with processes owned by other users, or from other applications, in other projects.
-    kyverno.io/kyverno-version: v1.4.3
-    kyverno.io/kubernetes-version: v1.20
+    kyverno.io/kyverno-version: 1.4.3
+    kyverno.io/kubernetes-version: "1.20"
 spec:
   background: false
   validationFailureAction: audit
