--- a/other/disable_automountserviceaccounttoken/disable-automountserviceaccounttoken.yaml
+++ b/other/disable_automountserviceaccounttoken/disable-automountserviceaccounttoken.yaml
@@ -7,6 +7,8 @@ metadata:
     policies.kyverno.io/category: Other
     policies.kyverno.io/severity: medium
     policies.kyverno.io/subject: ServiceAccount
+    kyverno.io/kyverno-version: 1.5.1
+    kyverno.io/kubernetes-version: "1.21"
     policies.kyverno.io/description: >-
       A new ServiceAccount called `default` is created whenever a new Namespace is created.
       Pods spawned in that Namespace, unless otherwise set, will be assigned this ServiceAccount.
