--- a/cert-manager/limit-duration/limit-duration.yaml
+++ b/cert-manager/limit-duration/limit-duration.yaml
@@ -8,9 +8,10 @@ metadata:
     policies.kyverno.io/severity: medium
     policies.kyverno.io/minversion: 1.3.6
     policies.kyverno.io/subject: Certificate
-    policies.kyverno.io/description: k8s managed non-letsencrypt certificates have to be renewed in every 100day
+    policies.kyverno.io/description: >-
+      Kubernetes managed non-letsencrypt certificates have to be renewed in every 100 days.
 spec:
-  validationFailureAction: enforce
+  validationFailureAction: audit
   background: false
   rules:
   - name: certificate-duration-max-100days 
