fix query name to have double quotes
Signed-off-by: Chip Zoller <chipzoller@gmail.com>

--- a/other/prepend_image_registry/prepend_image_registry.yaml
+++ b/other/prepend_image_registry/prepend_image_registry.yaml
@@ -38,7 +38,7 @@ spec:
           spec:
             containers:
             - name: "{{ element.name }}"           
-              image: "registry.io/{{ images.containers.{{element.name}}.path}}:{{images.containers.{{element.name}}.tag}}"
+              image: registry.io/{{ images.containers."{{element.name}}".path}}:{{images.containers."{{element.name}}".tag}}
   - name: prepend-registry-initcontainers
     match:
       resources:
@@ -58,4 +58,4 @@ spec:
           spec:
             initContainers:
             - name: "{{ element.name }}"           
-              image: "registry.io/{{ images.initContainers.{{element.name}}.path}}:{{images.initContainers.{{element.name}}.tag}}"
+              image: registry.io/{{ images.initContainers."{{element.name}}".path}}:{{images.initContainers."{{element.name}}".tag}}
