--- a/other/add-imagepullsecrets-for-containers-and-initcontainers.yaml
+++ b/other/add-imagepullsecrets-for-containers-and-initcontainers.yaml
@@ -23,10 +23,10 @@ spec:
         - Pod
     preconditions:
       any:
-      - key: "corp.reg.com/*"
+      - key: "corp.reg.com"
         operator: In
         value: "{{ images.initContainers.*.registry }}"
-      - key: "corp.reg.com/*"          
+      - key: "corp.reg.com"          
         operator: In
         value: "{{ images.containers.*.registry }}"
     mutate:
