--- a/other/add_certificates_volume/add_certificates_volume.yaml
+++ b/other/add_certificates_volume/add_certificates_volume.yaml
@@ -9,6 +9,8 @@ metadata:
     policies.kyverno.io/description: >-
       In some cases you would need to trust custom CA certificates for all the containers of a Pod.
       It makes sense to be in a ConfigMap so that you can automount them by only setting an annotation.
+      This policy adds a volume to all containers in a Pod containing the certificate if the annotation
+      called `inject-certs` with value `enabled` is found.
 spec:
   background: false
   rules:
