--- a/other/check_serviceaccount/check_serviceaccount.yaml
+++ b/other/check_serviceaccount/check_serviceaccount.yaml
@@ -5,7 +5,7 @@ metadata:
   annotations:
     policies.kyverno.io/title: Check ServiceAccount
     policies.kyverno.io/category: Sample
-    policies.kyverno.io/subject: Pod
+    policies.kyverno.io/subject: Pod,ServiceAccount
     kyverno.io/kyverno-version: 1.5.2
     kyverno.io/kubernetes-version: "1.21"
     policies.kyverno.io/description: >-
