--- a/best-practices/add_safe_to_evict.yaml
+++ b/best-practices/add_safe_to_evict.yaml
@@ -4,7 +4,7 @@ metadata:
   name: add-safe-to-evict
   annotations:
     policies.kyverno.io/category: Workload Management
-    policies.kyverno.io/subject: Pod
+    policies.kyverno.io/subject: Pod,Annotation
     policies.kyverno.io/minversion: 1.4.3
     policies.kyverno.io/description: >-
       The Kubernetes cluster autoscaler does not evict pods that 
