--- a/other/add_certificates_volume/add_certificates_volume.yaml
+++ b/other/add_certificates_volume/add_certificates_volume.yaml
@@ -5,9 +5,10 @@ metadata:
   annotations:
     policies.kyverno.io/title: Add Certificates as a Volume
     policies.kyverno.io/category: Sample
-    policies.kyverno.io/subject: Pod
+    policies.kyverno.io/subject: Pod,Volume
     kyverno.io/kyverno-version: 1.5.2
-    kyverno.io/kubernetes-version: "1.21"
+    kyvepolicies.kyverno.io/minversion: 1.5.0
+    no.io/kubernetes-version: "1.21"
     policies.kyverno.io/description: >-
       In some cases you would need to trust custom CA certificates for all the containers of a Pod.
       It makes sense to be in a ConfigMap so that you can automount them by only setting an annotation.
