--- a/other/inject_sidecar_deployment/inject_sidecar_deployment.yaml
+++ b/other/inject_sidecar_deployment/inject_sidecar_deployment.yaml
@@ -5,7 +5,7 @@ metadata:
   annotations:
     policies.kyverno.io/title: Inject Sidecar Container
     policies.kyverno.io/category: Sample
-    policies.kyverno.io/subject: Pod
+    policies.kyverno.io/subject: Pod,Volume
     policies.kyverno.io/description: >-
       The sidecar pattern is very common in Kubernetes whereby other applications can
       insert components via tacit modification of a submitted resource. This is, for example,
