--- a/other/restrict_automount_sa_token/restrict_automount_sa_token.yaml
+++ b/other/restrict_automount_sa_token/restrict_automount_sa_token.yaml
@@ -6,7 +6,7 @@ metadata:
     policies.kyverno.io/title: Restrict Auto-Mount of Service Account Tokens
     policies.kyverno.io/category: Sample
     policies.kyverno.io/severity: medium
-    policies.kyverno.io/subject: Pod
+    policies.kyverno.io/subject: Pod,ServiceAccount
     policies.kyverno.io/description: >-
       Kubernetes automatically mounts ServiceAccount credentials in each Pod.
       The ServiceAccount may be assigned roles allowing Pods to access API resources.
