--- a/other/restrict_service_account.yaml
+++ b/other/restrict_service_account.yaml
@@ -6,7 +6,7 @@ metadata:
     policies.kyverno.io/title: Restrict Service Account
     policies.kyverno.io/category: Sample
     policies.kyverno.io/severity: medium
-    policies.kyverno.io/subject: Pod
+    policies.kyverno.io/subject: Pod,ServiceAccount
     policies.kyverno.io/minversion: 1.3.5
     policies.kyverno.io/description: >-
       Users may be able to specify any ServiceAccount which exists in their Namespace without
