--- a/other/add_certificates_volume/add_certificates_volume.yaml
+++ b/other/add_certificates_volume/add_certificates_volume.yaml
@@ -7,8 +7,9 @@ metadata:
     policies.kyverno.io/category: Sample
     policies.kyverno.io/subject: Pod,Volume
     kyverno.io/kyverno-version: 1.5.2
-    kyvepolicies.kyverno.io/minversion: 1.5.0
-    no.io/kubernetes-version: "1.21"
+    kyverno.io/kubernetes-version: "1.21"
+    policies.kyverno.io/minversion: 1.5.0
+    pod-policies.kyverno.io/autogen-controllers: DaemonSet,Deployment,Job,StatefulSet
     policies.kyverno.io/description: >-
       In some cases you would need to trust custom CA certificates for all the containers of a Pod.
       It makes sense to be in a ConfigMap so that you can automount them by only setting an annotation.
