--- a/other/allowed_pod_priorities/values.yaml
+++ b/other/allowed_pod_priorities/values.yaml
@@ -13,3 +13,11 @@ policies:
         values:
           podprioritydict.data.production: "[\"high-priority\", \"moderate-priority\", \"low-priority\"]"
           request.namespace: production
+      - name: autogen-validate-pod-priority-pods
+        values:
+          podprioritydict.data.default: "[\"high-priority\", \"moderate-priority\", \"low-priority\"]"
+          request.namespace: default
+      - name: autogen-cronjob-validate-pod-priority-pods
+        values:
+          podprioritydict.data.default: "[\"high-priority\", \"moderate-priority\", \"low-priority\"]"
+          request.namespace: default
