--- a/other/block-velero-restore/block-velero-restore.yaml
+++ b/other/block-velero-restore/block-velero-restore.yaml
@@ -4,7 +4,7 @@ metadata:
   name: block-velero-restore
   annotations:
     policies.kyverno.io/title: Block Velero Restore to Protected Namespace
-    policies.kyverno.io/category: Sample
+    policies.kyverno.io/category: Velero
     policies.kyverno.io/subject: Restore
     policies.kyverno.io/description: >-
       Velero allows on backup and restore operations and is designed to be run with full cluster admin permissions.
@@ -13,7 +13,7 @@ metadata:
       It checks the Restore CRD object and its namespaceMapping field. If destination match protected namespace
       then operation fails and warning message is throw.
 spec:
-  validationFailureAction: enforce
+  validationFailureAction: audit
   background: false
   rules:
   - name: block-velero-restore-to-protected-namespace
