--- a/other/restrict_annotations/resource.yaml
+++ b/other/restrict_annotations/resource.yaml
@@ -26,8 +26,9 @@ spec:
     matchLabels:
       app: myapp
   template:
-    labels:
-      app: myapp
+    metadata:
+      labels:
+        app: myapp
     spec:
       containers:
       - image: nginx
