add any/all tag due to https://github.com/kubernetes/kubernetes/issues/107690
Signed-off-by: ShutingZhao <shuting@nirmata.com>

--- a/other/add-imagepullsecrets-for-containers-and-initcontainers.yaml
+++ b/other/add-imagepullsecrets-for-containers-and-initcontainers.yaml
@@ -25,8 +25,8 @@ spec:
       any:
       - key: "corp.reg.com"
         operator: In
-        value: "{{ images.initContainers.*.registry }}"
-      - key: "corp.reg.com"          
+        value: "{{ images.initContainers.*.registry || `[]` }}"
+      - key: "corp.reg.com/*"          
         operator: In
         value: "{{ images.containers.*.registry }}"
     mutate:
