--- a/other/mutate-large-termination-gps.yaml
+++ b/other/mutate-large-termination-gps.yaml
@@ -21,6 +21,7 @@ spec:
           kinds:
             - Pod
       preconditions:
+        all:
         - key: "{{request.object.spec.terminationGracePeriodSeconds}}"
           operator: GreaterThan
           value: 50   # maximum tGPS allowed by cluster admin
