--- a/other/require_imagepullsecrets.yaml
+++ b/other/require_imagepullsecrets.yaml
@@ -21,11 +21,12 @@ spec:
         kinds:
         - Pod
     preconditions:
-    - key: "{{ images.containers.*.registry }}"
-      operator: NotIn
-      value:
-      - ghcr.io
-      - quay.io
+      all:
+      - key: "{{ images.containers.*.registry }}"
+        operator: NotIn
+        value:
+        - ghcr.io
+        - quay.io
     validate:
       message: "An `imagePullSecret` is required when pulling from this registry."
       pattern:
