--- a/other/require_netpol.yaml
+++ b/other/require_netpol.yaml
@@ -35,6 +35,7 @@ spec:
       message: "Every Deployment requires a matching NetworkPolicy."
       deny:
         conditions:
-        - key: "{{policies_count}}"
-          operator: LessThan
-          value: 1
+          any:
+          - key: "{{policies_count}}"
+            operator: LessThan
+            value: 1
