--- a/other/require_pdb.yaml
+++ b/other/require_pdb.yaml
@@ -34,6 +34,7 @@ spec:
       message: "There is no corresponding PodDisruptionBudget found for this Deployment."
       deny:
         conditions:
-        - key: "{{pdb_count}}"
-          operator: LessThan
-          value: 1
+          any:
+          - key: "{{pdb_count}}"
+            operator: LessThan
+            value: 1
