--- a/other/restrict_pod_count_per_node/restrict_pod_count_per_node.yaml
+++ b/other/restrict_pod_count_per_node/restrict_pod_count_per_node.yaml
@@ -28,6 +28,7 @@ spec:
             urlPath: "/api/v1/pods"
             jmesPath: "items[?spec.nodeName=='minikube'] | length(@)"
       preconditions:
+        any:
         - key: "{{ request.operation }}"
           operator: Equals
           value: "CREATE"
@@ -35,6 +36,7 @@ spec:
         message: "A maximum of 10 Pods are allowed on the Node `minikube`"
         deny:
           conditions:
+            any:
             - key: "{{ podcounts }}"
               operator: GreaterThan
               value: 10
