--- a/other/restrict_service_account.yaml
+++ b/other/restrict_service_account.yaml
@@ -35,6 +35,7 @@ spec:
       message: "Invalid service account {{ request.object.spec.serviceAccountName }} for image {{ images.containers.*.registry | [0] }}/{{ images.containers.*.name | [0] }}"
       deny:
         conditions:
-        - key: "{{ images.containers.*.registry | [0] }}/{{ images.containers.*.name | [0] }}"
-          operator: NotIn
-          value: "{{ saMap.data.\"{{ request.object.spec.serviceAccountName }}\" }}"
+          any:
+          - key: "{{ images.containers.*.registry | [0] }}/{{ images.containers.*.name | [0] }}"
+            operator: NotIn
+            value: "{{ saMap.data.\"{{ request.object.spec.serviceAccountName }}\" }}"
