--- a/other/restrict_node_label_creation.yaml
+++ b/other/restrict_node_label_creation.yaml
@@ -25,12 +25,13 @@ spec:
         kinds:
         - Node
     preconditions:
-    - key: "{{request.operation}}"
-      operator: Equals
-      value: UPDATE
-    - key: "{{request.object.metadata.labels.foo}}"
-      operator: Equals
-      value: "*"
+      all:
+      - key: "{{request.operation}}"
+        operator: Equals
+        value: UPDATE
+      - key: "{{request.object.metadata.labels.foo}}"
+        operator: Equals
+        value: "*"
     validate:
       message: "Setting the `foo` label on a Node is not allowed."
       deny: {}
