--- a/other/unique-ingress-paths.yaml
+++ b/other/unique-ingress-paths.yaml
@@ -41,15 +41,15 @@ spec:
           value: "CREATE"
       validate:
         message: >-
-          The root path /{{request.object.spec.rules[].http.paths[].path | to_string(@) | split(@, '/') | [1]}} exists
+          The root path /{{request.object.spec.rules[].http.paths[].path | to_string(@) | split(@, '/') | [1]}}/ exists
           in another Ingress rule elsewhere in the cluster.
         deny:
           conditions:
             all:
               # Deny if the root path of the request exists somewhere else in the cluster other than the same Namespace.
-              - key: /{{request.object.spec.rules[].http.paths[].path | to_string(@) | split(@, '/') | [1]}}
+              - key: /{{request.object.spec.rules[].http.paths[].path | to_string(@) | split(@, '/') | [1]}}/
                 operator: In
                 value: "{{allpaths}}"
-              - key: /{{request.object.spec.rules[].http.paths[].path | to_string(@) | split(@, '/') | [1]}}
+              - key: /{{request.object.spec.rules[].http.paths[].path | to_string(@) | split(@, '/') | [1]}}/
                 operator: NotIn
                 value: "{{nspath}}"
