Add `any`/`all` in `preconditions` and `deny.conditions`
Signed-off-by: Abhinav Sinha <abhinav@nirmata.com>

--- a/other/ensure_probes_different/ensure_probes_different.yaml
+++ b/other/ensure_probes_different/ensure_probes_different.yaml
@@ -28,6 +28,7 @@ spec:
         message: "Liveness and readiness probes cannot be the same."
         deny:
           conditions:
-          - key: "{{ request.object.spec.template.spec.containers[?readinessProbe==livenessProbe] | length(@) }}"
-            operator: GreaterThan
-            value: "0"
+            any:
+            - key: "{{ request.object.spec.template.spec.containers[?readinessProbe==livenessProbe] | length(@) }}"
+              operator: GreaterThan
+              value: "0"
