--- a/other/limit-hostpath-vols/limit-hostpath-vols.yaml
+++ b/other/limit-hostpath-vols/limit-hostpath-vols.yaml
@@ -40,6 +40,7 @@ spec:
       - list: "request.object.spec.volumes[?hostPath].hostPath"
         deny:
           conditions:
-          - key: "{{ element.path  | to_string(@) | split(@, '/') | [1] }}"
-            operator: NotEquals
-            value: data
+            any:
+            - key: "{{ element.path  | to_string(@) | split(@, '/') | [1] }}"
+              operator: NotEquals
+              value: data
