--- a/other/memory-requests-equal-limits/memory-requests-equal-limits.yaml
+++ b/other/memory-requests-equal-limits/memory-requests-equal-limits.yaml
@@ -29,9 +29,10 @@ spec:
       message: "resources.requests.memory must be equal to resources.limits.memory"
       deny:
         conditions:
-        - key: "{{ request.object.spec.template.spec.containers[?resources.requests.memory!=resources.limits.memory] | length(@) }}"
-          operator: NotEquals
-          value: 0
+          any:
+          - key: "{{ request.object.spec.template.spec.containers[?resources.requests.memory!=resources.limits.memory] | length(@) }}"
+            operator: NotEquals
+            value: 0
   - name: memory-requests-equal-limits-pod
     match:
       resources:
@@ -41,9 +42,10 @@ spec:
       message: "resources.requests.memory must be equal to resources.limits.memory"
       deny:
         conditions:
-        - key: "{{ request.object.spec.containers[?resources.requests.memory!=resources.limits.memory] | length(@) }}"
-          operator: NotEquals
-          value: 0
+          any:
+          - key: "{{ request.object.spec.containers[?resources.requests.memory!=resources.limits.memory] | length(@) }}"
+            operator: NotEquals
+            value: 0
   - name: memory-requests-equal-limits-cronjob
     match:
       resources:
@@ -53,6 +55,7 @@ spec:
       message: "resources.requests.memory must be equal to resources.limits.memory"
       deny:
         conditions:
-        - key: "{{ request.object.spec.jobTemplate.spec.template.spec.containers[?resources.requests.memory!=resources.limits.memory] | length(@) }}"
-          operator: NotEquals
-          value: 0
+          any:
+          - key: "{{ request.object.spec.jobTemplate.spec.template.spec.containers[?resources.requests.memory!=resources.limits.memory] | length(@) }}"
+            operator: NotEquals
+            value: 0
