--- a/other/pod_lifetime_annotation/enforce_pod_duration.yaml
+++ b/other/pod_lifetime_annotation/enforce_pod_duration.yaml
@@ -24,6 +24,7 @@ spec:
       message: "Pod lifetime exceeds limit of 8h"
       deny:
         conditions:
-        - key: "{{ request.object.metadata.annotations.\"pod.kubernetes.io/lifetime\" }}"
-          operator: GreaterThan
-          value: "8h"
+          any:
+          - key: "{{ request.object.metadata.annotations.\"pod.kubernetes.io/lifetime\" }}"
+            operator: GreaterThan
+            value: "8h"
