--- a/other/require_unique_external_dns/require_unique_external_dns.yaml
+++ b/other/require_unique_external_dns/require_unique_external_dns.yaml
@@ -33,11 +33,12 @@ spec:
             urlPath: "/api/v1/services"
             jmesPath: "items[].metadata.annotations.\"external-dns.alpha.kubernetes.io/hostname\""
       preconditions:
-      - key: "{{ request.operation }}"
-        operator: In
-        value:
-          - CREATE
-          - UPDATE
+        all:
+        - key: "{{ request.operation }}"
+          operator: In
+          value:
+            - CREATE
+            - UPDATE
       validate:
         message: >-
           External DNS entry "{{request.object.metadata.annotations."external-dns.alpha.kubernetes.io/hostname"}}" is already
