Add non-existence checks in `preconditions`
Signed-off-by: Abhinav Sinha <abhinav@nirmata.com>

--- a/other/replace_image_registry/replace_image_registry.yaml
+++ b/other/replace_image_registry/replace_image_registry.yaml
@@ -40,7 +40,7 @@ spec:
           - Pod
       preconditions:
         all:
-        - key: "{{ request.object.spec.initContainers[] | length(@) }}"
+        - key: "{{ request.object.spec.initContainers[] || '' | length(@) }}"
           operator: GreaterThanOrEquals
           value: 1
       mutate:
@@ -75,7 +75,7 @@ spec:
           - Deployment
       preconditions:
         all:
-        - key: "{{ request.object.spec.template.spec.initContainers[] | length(@) }}"
+        - key: "{{ request.object.spec.template.spec.initContainers[] || '' | length(@) }}"
           operator: GreaterThanOrEquals
           value: 1
       mutate:
