Mark net.ipv4.ip_unprivileged_port_start as safe
`net.ipv4.ip_unprivileged_port_start` has been marked as safe in Kubernetes: https://github.com/kubernetes/kubernetes/pull/103326

Signed-off-by: Silvio Ankermann <silvio@booq.org>

--- a/pod-security/baseline/restrict-sysctls/restrict-sysctls.yaml
+++ b/pod-security/baseline/restrict-sysctls/restrict-sysctls.yaml
@@ -27,10 +27,10 @@ spec:
           Setting additional sysctls above the allowed type is disallowed.
           The field spec.securityContext.sysctls must not use any other names
           than 'kernel.shm_rmid_forced', 'net.ipv4.ip_local_port_range',
-          'net.ipv4.tcp_syncookies' and 'net.ipv4.ping_group_range'.
+          'net.ipv4.tcp_syncookies', 'net.ipv4.ping_group_range' and 'net.ipv4.ip_unprivileged_port_start'.
         pattern:
           spec:
             =(securityContext):
               =(sysctls):
-                - name: "kernel.shm_rmid_forced | net.ipv4.ip_local_port_range | net.ipv4.tcp_syncookies | net.ipv4.ping_group_range"
+                - name: "kernel.shm_rmid_forced | net.ipv4.ip_local_port_range | net.ipv4.tcp_syncookies | net.ipv4.ping_group_range | net.ipv4.ip_unprivileged_port_start"
                   value: "?*"
